优化代码命名及代码写法 优化框架使用文档及 Demo 过滤 Android 11 上面非应用的日志 新增支持设置 Logcat 默认搜索关键字 新增支持设置 Logcat 默认日志等级 修正部分手机会读取重复日志的问题